syntax = "proto3";

package account_service;

// 添加账号, 需要手工添加账号的情景
message NewAccountRequest {
  string area_code = 1;
  string phone = 2;
  string password = 3;
}
message NewAccountResponse {
  string result = 1;
}

// 注册账号, 用户需要自己注册账号的情景
message RegisterRequest {
  string organization_id = 1;
  string department_id = 2;
  string phone = 4;
  string password = 5;
}
message RegisterResponse {
  string result = 1;
}

// 自己修改手机号码
message ChangeOwnPhoneRequest{
  string old_phone = 1;
  string new_phone = 2;
  string password = 3;
}
message ChangePhoneOwnResponse{
  string result = 1;
}