syntax = "proto3";

package account_service;

enum LoginStatus{
  LoggedIn = 0;
  LoggedOut = 1;
  LogginFailed = 2;
}

enum AccountStatus{
  Stopped = 0;
  Actived = 1;
}